--- a/src/prydonian.css
+++ b/src/prydonian.css
@@ -50,6 +50,7 @@
 	--button-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), inset 0 -1px 0 rgba(0, 0, 0, .1);
 	--button-shadow-hover: inset 0 5rem 5rem rgba(0, 0, 0, .25), inset 0 -1px 0 rgba(0, 0, 0, .25);
 	--button-shadow-active: inset 0 1px 5rem rgba(0, 0, 0, .1), inset 0 1px 0 rgba(0, 0, 0, .1);
+	--button-shadow-hollow: inset 0 0 0.1rem rgba(0, 0, 0, .5), inset 0 0 0 rgba(0, 0, 0, .1);
 
 	--code-spacing-x: calc(var(--font-regular) * .4);
 	--code-spacing-y: calc(var(--font-regular) * .2);
@@ -213,6 +214,31 @@ pre {
 	margin-top: var(--pm-zero);
 	margin-bottom: var(--pm-large);
 }
+.text-right {
+	text-align: right;
+}
+.text-left {
+	text-align: left;
+}
+.text-center {
+	text-align: center;
+}
+.text-justify {
+	text-align: justify;
+}
+fieldset {
+	border: none;
+	padding: var(--pm-zero);
+	margin: 0 0 var(--pm-medium) 0;
+}
+fieldset legend {
+	display: block;
+	font-weight: var(--weight-book);
+	margin: 0 0 var(--pm-medium) 0;
+}
+.form-fields {
+	margin: 0 0 var(--pm-medium) 0;
+}
 label {
 	display: inline-block;
 	font-size: var(--font-regular);
@@ -244,6 +270,7 @@ textarea {
 	white-space: nowrap;
 	-moz-appearance: none;
 	-webkit-appearance: none;
+	margin: 0 0 var(--pm-small) 0;
 }
 select {
 	position: relative;
@@ -267,6 +294,7 @@ button, [type="submit"] {
 	border-radius: var(--border-radius);
 	box-shadow: var(--button-shadow);
 	color: var(--color-black);
+	margin: 0 0 var(--pm-small) 0;
 	transition: .1s box-shadow, .1s background-color, .1s color;
 }
 button:hover, [type="submit"]:hover {
@@ -370,6 +398,7 @@ button:active, [type="submit"]:active {
 .hollow {
 	background: transparent !important;
 	border: 1px solid var(--color-silver);
+	box-shadow: none;
 }
 .primary.hollow {
 	border: 1px solid var(--color-green);
@@ -397,7 +426,7 @@ button:active, [type="submit"]:active {
 }
 .hollow:hover, .hollow:active, hollow:focus {
 	background: transparent !important;
-	box-shadow: var(--button-shadow);
+	box-shadow: var(--button-shadow-hollow);
 }
 .subtle {
 	color: var(--color-grey);
@@ -418,6 +447,7 @@ button:active, [type="submit"]:active {
 	padding: var(--pm-medium) var(--pm-large);
 	border-radius: var(--border-radius);
 	color: var(--color-black);
+	margin: 0 0 var(--pm-small) 0;
 }
 .group button, .group [type="submit"], .group input, .group span, .group select {
 	border-radius: var(--pm-zero);
