--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -8,17 +8,16 @@
 	grid-gap: 1rem;
 }
 nav {
-	grid-column: auto / span 2;
+	grid-column: auto / span 12;
 	padding: var(--pm-large);
-	border-right: 1px solid var(--color-grey);
-	text-align: right;
+	text-align: center;
 }
 nav a {
-	display: block;
+	display: inline-block;
 	margin-bottom: var(--pm-large);
 }
 .main {
-	grid-column: auto / span 10;
+	grid-column: auto / span 12;
 }
 section {
 	padding: 0 0 var(--pm-xxlarge) 0;
@@ -27,9 +26,4 @@ section {
 }
 .space {
 	padding-bottom: 0.5rem;
-}
-@media screen and (max-width: 50rem) {
-	nav, .main {
-		grid-column: auto / span 12;
-	}
 }
