--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:700');
 .container {
 	width: 100%;
 	max-width: 80rem;
@@ -26,4 +27,8 @@ section {
 }
 .space {
 	padding-bottom: 0.5rem;
+}
+.header {
+	font-family: 'Montserrat';
+	color: #8C1717;
 }
