--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -13,10 +13,7 @@ nav {
 	padding: var(--pm-large);
 	text-align: center;
 }
-nav a {
-	display: inline-block;
-	margin-bottom: var(--pm-large);
-}
+
 .main {
 	grid-column: auto / span 12;
 }
@@ -31,4 +28,37 @@ section {
 .header {
 	font-family: 'Montserrat';
 	color: #8C1717;
+}
+nav {
+	display: flex;
+	margin: 0 0 var(--pm-large) 0;
+}
+nav span {
+	width: auto;
+	font-family: var(--button-font);
+	font-size: var(--button-size);
+	line-height: inherit;
+	font-weight: var(--button-weight);
+	background: var(--color-silver);
+	border: none;
+	padding: var(--pm-medium) var(--pm-large) 0 var(--pm-large);
+	border-radius: var(--border-radius);
+	color: var(--color-black);
+	margin: 0 0 var(--pm-small) 0;
+}
+nav button, nav [type="submit"], nav input, nav span, nav select, nav .button {
+	border-radius: var(--pm-zero);
+	display: block;
+}
+nav input {
+	border-left-width: 0;
+}
+nav input:first-child, nav .button:first-child {
+	border-left-width: 1px;
+}
+nav button:first-child, nav [type="submit"]:first-child, nav input:first-child, nav select:first-child, nav span:first-child, nav .button:first-child {
+	border-radius: var(--border-radius) 0 0 var(--border-radius);
+}
+nav button:last-child, nav [type="submit"]:last-child, nav input:last-child, nav select:last-child, nav span:last-child, nav .button:last-child {
+	border-radius: 0 var(--border-radius) var(--border-radius) 0;
 }
