--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -5,11 +5,14 @@
 	padding: 0 var(--pm-xlarge);
 	margin: 0 auto;
 	display: grid;
-	grid-template-columns: repeat(12, minmax(0, 1fr));
+	grid-template-columns: repeat(auto-fill, 1fr);
 	grid-gap: 1rem;
 }
 nav {
-	grid-column: auto / span 12;
+	width: 100%;
+	display: flex;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(1em, 1fr));
 	padding: var(--pm-large);
 	text-align: center;
 }
@@ -29,10 +32,6 @@ section {
 	font-family: 'Montserrat';
 	color: #8C1717;
 }
-nav {
-	display: flex;
-	margin: 0 0 var(--pm-large) 0;
-}
 nav span {
 	width: auto;
 	font-family: var(--button-font);
@@ -49,6 +48,8 @@ nav span {
 nav button, nav [type="submit"], nav input, nav span, nav select, nav .button {
 	border-radius: var(--pm-zero);
 	display: block;
+	padding: var(--pm-large);
+	font-size: var(--font-small);
 }
 nav input {
 	border-left-width: 0;
