--- a/src/prydonian.css
+++ b/src/prydonian.css
@@ -47,18 +47,20 @@
 	--button-font: inherit;
 	--button-weight: inherit;
 	--button-size: var(--font-regular);
-	--progress-shadow: 1px 0 1px rgba(0,0,0,0.1);
+	--progress-shadow: 1px 0 1px rgba(0,0,0,0.25);
 	--button-shadow: inset 0 2px 0 rgba(255, 255, 255, .1), inset 0 -2px 0 rgba(0, 0, 0, .1);
 	--button-shadow-hover: inset 0 5rem 5rem rgba(0, 0, 0, .25), inset 0 -1px 0 rgba(0, 0, 0, .25);
 	--button-shadow-active: inset 0 2px 5rem rgba(0, 0, 0, .1), inset 0 2px 0 rgba(0, 0, 0, .1);
 	--button-shadow-hollow: inset 0 0 1px rgba(0, 0, 0, .75);
 	--button-shadow-hollow-invert: inset 0 0 2px rgba(255,255,255, .75), inset 0 0 2px rgba(255,255,255, .5);
 	--progress-loading: linear-gradient(-45deg, rgba(255,255,255,0.25) 25%, transparent 25%, transparent 50%, rgba(255,255,255,0.25) 50%, rgba(255,255,255,0.25) 75%, transparent 75%, transparent);
+	--range-thumb-shadow: 1px 1px 1px rgba(0,0,0,0.25);
+	--range-track-shadow: inset -1px 1px 1px rgba(0, 0, 0, .25);
 
 	--code-spacing-x: calc(var(--font-regular) * .4);
 	--code-spacing-y: calc(var(--font-regular) * .2);
 
-	--input-range-track-box-shadow: inset 0 1px 0 rgba(0, 0, 0, .05);
+
 
 	/* Paddings/Margins */
 	--pm-zero: 0;
@@ -259,6 +261,7 @@ fieldset legend {
 	overflow: hidden;
 	border-radius: var(--border-radius-big);
 	background: var(--color-silver);
+	box-shadow: var(--range-track-shadow);
 }
 .progress-value {
 	background-color: var(--color-teal);
@@ -318,9 +321,9 @@ fieldset legend {
 }
 .loader {
 	position: relative;
-	display: inline-block;
+	display: block;
 	margin: 0 auto;
-	width: 6em;
+	width: 9em;
 	height: 4em;
 }
 .loader:before, .loader:after {
@@ -426,6 +429,7 @@ button:active, [type="submit"]:active, .button:active {
 	padding: var(--pm-xlarge);
 	border-radius: var(--border-radius);
 	margin-bottom: var(--pm-large);
+	position: relative;
 }
 .message a {
 	color: var(--color-dark);
@@ -588,6 +592,7 @@ button:active, [type="submit"]:active, .button:active {
 	font-weight: var(--weight-book);
 }
 .group {
+	width: 100%;
 	display: flex;
 	margin: 0 0 var(--pm-large) 0;
 }
@@ -634,6 +639,42 @@ button:active, [type="submit"]:active, .button:active {
 	padding: calc(var(--pm-medium) * 4) calc(var(--pm-large) * 4) !important;
 	font-size: var(--font-large) !important;
 }
+input.medium,
+input[type="color"].medium,
+input[type="date"].medium,
+input[type="datetime-local"].medium,
+input[type="email"].medium,
+input[type="month"].medium,
+input[type="number"].medium,
+input[type="password"].medium,
+input[type="search"].medium,
+input[type="tel"].medium,
+input[type="text"].medium,
+input[type="time"].medium,
+input[type="url"].medium,
+input[type="week"].medium,
+select.medium,
+textarea.medium {
+	padding: calc(var(--pm-medium) * 2) var(--pm-large) !important;
+}
+input.big,
+input[type="color"].big,
+input[type="date"].big,
+input[type="datetime-local"].big,
+input[type="email"].big,
+input[type="month"].big,
+input[type="number"].big,
+input[type="password"].big,
+input[type="search"].big,
+input[type="tel"].big,
+input[type="text"].big,
+input[type="time"].big,
+input[type="url"].big,
+input[type="week"].big,
+select.big,
+textarea.big {
+	padding: calc(var(--pm-medium) * 4) var(--pm-large) !important;
+}
 .loading.big {
 	border-radius: var(--border-radius-big);
 }
@@ -656,7 +697,7 @@ input[type="range"]::-webkit-slider-runnable-track {
 	background: var(--color-silver);
 	border-radius: var(--border-radius);
 	border: none;
-	box-shadow: var(--input-range-track-box-shadow);
+	box-shadow: var(--range-track-shadow);
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -664,14 +705,16 @@ input[type="range"]::-webkit-slider-thumb {
 	width: 2.5rem;
 	height: 2.5rem;
 	border-radius: 50%;
-	background: var(--color-red);
+	background: var(--color-teal);
 	cursor: pointer;
 	-webkit-appearance: none;
 	margin-top: -1rem;
+	box-shadow: var(--range-shadow);
 }
 
 input[type="range"]:focus::-webkit-slider-runnable-track {
 	background: var(--color-silver);
+	box-shadow: var(--range-track-shadow);
 }
 
 input[type="range"]::-moz-range-track {
@@ -681,7 +724,7 @@ input[type="range"]::-moz-range-track {
 	background: var(--color-silver);
 	border-radius: var(--border-radius);
 	border: none;
-	box-shadow: var(--input-range-track-box-shadow);
+	box-shadow: var(--range-track-shadow);
 }
 
 input[type="range"]::-moz-range-thumb {
@@ -689,8 +732,9 @@ input[type="range"]::-moz-range-thumb {
 	height: 2.5rem;
 	width: 2.5rem;
 	border-radius: 50%;
-	background: var(--color-red);
+	background: var(--color-teal);
 	cursor: pointer;
+	box-shadow: var(--range-shadow);
 }
 
 input[type="range"]::-ms-track {
@@ -700,6 +744,7 @@ input[type="range"]::-ms-track {
 	background: transparent;
 	border-color: transparent;
 	color: transparent;
+	box-shadow: var(--range-track-shadow);
 }
 
 input[type="range"]::-ms-fill-lower {
@@ -719,8 +764,9 @@ input[type="range"]::-ms-thumb {
 	height: 1.5rem;
 	width: 1.5rem;
 	border-radius: 50%;
-	background: var(--color-red);
+	background: var(--color-teal);
 	cursor: pointer;
+	box-shadow: var(--range-shadow);
 }
 
 input[type="range"]:focus::-ms-fill-lower {
@@ -751,12 +797,12 @@ table caption {
 table th {
 	text-align: left;
 	background: var(--color-silver);
-	border-bottom: 1px solid var(--color-grey);
+	border-bottom: 1px solid var(--color-silver);
 	padding: var(--pm-medium);
 }
 
 table td {
-	border-bottom: 1px solid var(--color-grey);
+	border-bottom: 1px solid var(--color-silver);
 	padding: var(--pm-medium);
 }
 
@@ -765,13 +811,13 @@ table.stripe tr:nth-child(odd) td {
 }
 
 table.border {
-	border: 1px solid var(--color-grey);
+	border: 1px solid var(--color-silver);
 }
 
 table.border td {
 	border-style: solid;
 	border-width: 1px;
-	border-color: var(--color-grey);
+	border-color: var(--color-silver);
 }
 
 table.hover tbody tr:hover td {
