--- a/src/prydonian.css
+++ b/src/prydonian.css
@@ -316,9 +316,10 @@ textarea {
 	margin: 0 0 var(--pm-small) 0;
 }
 input[readonly] {
-	opacity: 0.9;
-	background-color: var(--color-silver);
 	cursor: not-allowed;
+	box-shadow: none !important;
+	background-color: var(--color-offwhite);
+	color: var(--color-black);
 }
 input[type="color"] {
 	padding: 0;
@@ -886,9 +887,10 @@ input[type="range"]:focus::-ms-fill-upper {
 	margin-left: var(--font-xlarge);
 }
 .disabled, input:disabled, [type="submit"]:disabled, button:disabled {
-	opacity: 0.5;
 	cursor: not-allowed;
 	box-shadow: none !important;
+	background-color: var(--color-offwhite);
+	color: var(--color-black);
 }
 .progress-value.loading {
 	background-color: var(--color-teal) !important;
@@ -1166,6 +1168,39 @@ table.hover tbody tr:hover td {
 }
 .menu li:hover > ul {
 	display: block;
+}
+.breadcrumbs ul {
+	list-style: none;
+	margin: 0 0 var(--pm-large) 0;
+	padding: 0;
+}
+.breadcrumbs ul li {
+	position: relative;
+	list-style: none;
+	margin: 0;
+	padding: 0 var(--pm-xlarge) 0 0;
+	display: inline-block;
+}
+.breadcrumbs ul li:after {
+	content: "/";
+	position: absolute;
+	right: 0.5rem;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.breadcrumbs ul li:last-child:after {
+	content: "";
+}
+.breadcrumbs ul li a {
+	position: relative;
+	display: block;
+	color: var(--color-dark);
+	padding: 0;
+	text-decoration: none;
+}
+
+.breadcrumbs ul li.active a {
+	color: var(--color-blue);
 }
 hr {
 	border: none;
