--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -26,10 +26,22 @@ section {
 	padding: 0;
 	margin: 0 0 var(--pm-xxlarge) 0;
 	border-bottom: 1px solid var(--color-grey);
+	overflow: hidden;
 }
 .space {
 	padding-bottom: 0.5rem;
 }
 .header {
 	font-family: 'Montserrat';
+}
+.half {
+	width: 50%;
+	padding: var(--pm-medium);
+	float: left;
+}
+@media screen and (max-width: 769px) {
+	.half {
+		float: none;
+		width: 100%;
+	}
 }
