--- a/src/output.css
+++ b/src/output.css
@@ -1383,6 +1383,39 @@ table.hover tbody tr:hover td {
   color: #0074D9;
 }
 
+.card {
+  border: 1px solid #DDDDDD;
+  border-radius: 0.25rem;
+  margin-bottom: 1rem;
+}
+
+.card img {
+  max-width: 100%;
+  height: auto;
+}
+
+.card-title {
+  background-color: #DDDDDD;
+  padding: 1rem .5rem;
+  text-align: center;
+  font-weight: 500;
+}
+
+.card-content {
+  padding: 1rem .5rem;
+}
+
+.card-content:last-child p {
+  margin-bottom: 0;
+}
+
+.card-actions {
+  border-top: 1px solid #DDDDDD;
+  padding: 1rem .5rem;
+  text-align: center;
+  font-weight: 500;
+}
+
 hr {
   border: none;
   border-top: 1px solid #DDDDDD;
